// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modals should be rendered correctly 1`] = `
<div
  className="container modalBlocker shadow-none"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal width-420 height-auto container"
      role="modal"
    >
      <div
        className="root size-36 background-none padding-24 vPadding-12 spacing-6 modalHeader container align-items-center"
      >
        <div
          className="flexSpacer"
        />
      </div>
      <div
        className="root size-36 background-none padding-24 vPadding-24 spacing-12 modalFooter container align-items-center"
      />
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;

exports[`Modals should be rendered correctly with extra props 1`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal width-300 height-300 container"
      role="modal"
    >
      <div
        className="root size-36 background-night50 padding-6 vPadding-12 border-bottom-night400 spacing-6 modalHeader container align-items-center"
      >
        <div
          className="text font-sans-semibold color-night700 line-height-24 font-size-18 v-padding-12 container"
        >
          Test header
        </div>
        <div
          className="flexSpacer"
        />
        <div
          className="flexCell"
          onClick={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "auto",
              "flexGrow": undefined,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <button
            className="container uui-button-box uui-enabled -clickable root color-night600"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <SvgrURL
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="root size-36 background-white padding-18 vPadding-24 spacing-12 modalFooter container align-items-center"
      />
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;
